--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -17,13 +17,8 @@ body {
 /* Links */
 
 a,
-a:visited {
-  color: inherit;
-  text-decoration: none;
-}
-
+a:visited,
 a:hover {
-  color: inherit;
   text-decoration: none;
 }
 
