--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,9 +1,14 @@
 :root {
+  // Fonts
   --main-font-family: 'Open Sans', sans-serif;
   --secondary-font-family: 'Federo', sans-serif;
+  // Colors
   --accent-color: #697390;
   --secondary-color: #3a3a3a;
   --card-title-color: #2a2a2b;
+  --btn-color: #434343;
+  --light-color: #fff;
+  // Sizes
   --container-width: 1120px;
   --container-fluid-width: 1260px;
   --main-padding: 20px;
