--- a/src/scss/block/_buttons.scss
+++ b/src/scss/block/_buttons.scss
@@ -1,1 +1,14 @@
-.btn {}
+.btn {
+  padding: 8px 16px;
+  display: inline-block;
+  background-color: var(--btn-color);
+  font-family: var(--main-font-family);
+  color: var(--light-color);
+  text-transform: uppercase;
+  transition: all .5s;
+
+  &:hover {
+    background-color: darken($color: #434343, $amount: 5);
+    transform: scale(1.1);
+  }
+}
