--- a/src/scss/block/_user-menu.scss
+++ b/src/scss/block/_user-menu.scss
@@ -1,4 +1,5 @@
 .user-menu {
+  --size: 22px;
   @include flex-center-sb;
   gap: 37px;
 
@@ -6,7 +7,6 @@
     display: block;
 
     svg {
-      --size: 22px;
       width: var(--size);
       height: var(--size);
       fill: var(--accent-color);
@@ -14,8 +14,14 @@
 
       &:hover {
         fill: var(--secondary-color);
-        scale: (1.2);
+        transform: scale(1.2);
       }
     }
+  }
+
+  // 
+  &__search {
+    position: relative;
+    display: flex;
   }
 }
