--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,8 @@
 @import 'block/logo';
 @import 'block/menu';
 @import 'block/user-menu';
+@import 'block/hero';
+@import 'block/buttons';
 
 // Base styles
 
@@ -30,6 +32,14 @@ body {
 
 .main {
   flex: 1 1 auto;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
 }
 
 .container {
