created seller items section and product card

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -8,10 +8,13 @@
   --card-title-color: #2a2a2b;
   --btn-color: #434343;
   --light-color: #fff;
+  --price-color: #8c8c8c;
+  --hot: #f29731;
+  --seller: #9e0b0f;
   // Sizes
   --container-width: 1120px;
   --container-fluid-width: 1260px;
-  --main-padding: 20px;
+  --main-padding: 10px;
   --section-padding: 40px;
-  --main-gap: 30px;
+  --main-gap: 20px;
 }
