--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,9 @@
 @import 'block/user-menu';
 @import 'block/hero';
 @import 'block/buttons';
+@import 'block/seller-items';
+@import 'block/title';
+@import 'block/card';
 
 // Base styles
 
